option('html-docs', type : 'feature', description : 'enable to generate HTML documentation using rst2html')
option('pdf-docs', type : 'feature', description : 'enable to generate PDF documentation using rst2pdf')
option('vte', type : 'boolean', description : 'enable if you want virtual terminal support')
option('plugins', type : 'boolean', description : 'enable if you want plugin support')
option('api-docs', type : 'feature', description : 'enable to generate API documentation using Doxygen')
option('gtkdoc', type : 'boolean', description : 'enable to generate gtk-doc compatible headers for the API')
option('python-command', type: 'string', description: 'the default Python command')
option('socket', type: 'boolean', description: 'enable if you want to detect a running instance')
option('mac-integration', type: 'feature', description: 'enable for improved macOS integration using the gtk-mac-integration library')
