AM_CPPFLAGS = \
	-I$(srcdir)/main \
	-I$(srcdir)/parsers \
	-DEXTERNAL_PARSER_LIST_FILE=\"$(top_srcdir)/src/tagmanager/tm_parsers.h\" \
	-DG_LOG_DOMAIN=\"CTags\"
AM_CFLAGS = \
	$(GTK_CFLAGS) \
	@LIBGEANY_CFLAGS@

noinst_LTLIBRARIES = libctags.la

parsers = \
	parsers/abaqus.c \
	parsers/abc.c \
	parsers/actionscript.c \
	parsers/asciidoc.c \
	parsers/asm.c \
	parsers/basic.c \
	parsers/c.c \
	parsers/cobol.c \
	parsers/iniconf.c \
	parsers/css.c \
	parsers/diff.c \
	parsers/docbook.c \
	parsers/erlang.c \
	parsers/fortran.c \
	parsers/go.c \
	parsers/haskell.c \
	parsers/haxe.c \
	parsers/html.c \
	parsers/jscript.c \
	parsers/json.c \
	parsers/lcpp.c \
	parsers/lcpp.h \
	parsers/lua.c \
	parsers/make.c \
	parsers/markdown.c \
	parsers/matlab.c \
	parsers/nsis.c \
	parsers/objc.c \
	parsers/pascal.c \
	parsers/perl.c \
	parsers/php.c \
	parsers/powershell.c \
	parsers/python.c \
	parsers/r.c \
	parsers/rst.c \
	parsers/ruby.c \
	parsers/rust.c \
	parsers/sh.c \
	parsers/sql.c \
	parsers/tcl.c \
	parsers/tex.c \
	parsers/txt2tags.c \
	parsers/verilog.c \
	parsers/vhdl.c

# skip cmd.c and mini-geany.c which define main()
libctags_la_SOURCES = \
	main/args.c \
	main/args_p.h \
	main/colprint.c \
	main/colprint_p.h \
	main/ctags.h \
	main/debug.c \
	main/debug.h \
	main/dependency.c \
	main/dependency.h \
	main/dependency_p.h \
	main/e_msoft.h \
	main/entry.c \
	main/entry.h \
	main/entry_p.h \
	main/entry_private.c \
	main/error.c \
	main/error_p.h \
	main/field.c \
	main/field.h \
	main/field_p.h \
	main/flags.c \
	main/flags_p.h \
	main/fmt.c \
	main/fmt_p.h \
	main/gcc-attr.h \
	main/general.h \
	main/gvars.h \
	main/htable.c \
	main/htable.h \
	main/inline.h \
	main/interactive_p.h \
	main/keyword.c \
	main/keyword.h \
	main/keyword_p.h \
	main/kind.c \
	main/kind.h \
	main/kind_p.h \
	main/lregex.c \
	main/lregex.h \
	main/lregex_p.h \
	main/lxpath.c \
	main/lxpath.h \
	main/lxpath_p.h \
	main/main.c \
	main/main_p.h \
	main/mbcs.c \
	main/mbcs.h \
	main/mbcs_p.h \
	main/mio.c \
	main/mio.h \
	main/nestlevel.c \
	main/nestlevel.h \
	main/numarray.c \
	main/numarray.h \
	main/objpool.c \
	main/objpool.h \
	main/options.c \
	main/options.h \
	main/options_p.h \
	main/param.c \
	main/param.h \
	main/param_p.h \
	main/parse.c \
	main/parse.h \
	main/parse_p.h \
	main/parsers_p.h \
	main/portable-dirent_p.h \
	main/portable-scandir.c \
	main/promise.c \
	main/promise.h \
	main/promise_p.h \
	main/ptag.c \
	main/ptag_p.h \
	main/ptrarray.c \
	main/ptrarray.h \
	main/read.c \
	main/read.h \
	main/read_p.h \
	main/repoinfo.c \
	main/repoinfo.h \
	main/routines.c \
	main/routines.h \
	main/routines_p.h \
	main/seccomp.c \
	main/selectors.c \
	main/selectors.h \
	main/sort.c \
	main/sort_p.h \
	main/stats.c \
	main/stats_p.h \
	main/strlist.c \
	main/strlist.h \
	main/subparser.h \
	main/subparser_p.h \
	main/tokeninfo.c \
	main/tokeninfo.h \
	main/trace.c \
	main/trace.h \
	main/trashbox.c \
	main/trashbox.h \
	main/trashbox_p.h \
	main/types.h \
	main/unwindi.c \
	main/unwindi.h \
	main/vstring.c \
	main/vstring.h \
	main/writer-ctags.c \
	main/writer-etags.c \
	main/writer-json.c \
	main/writer-xref.c \
	main/writer.c \
	main/writer_p.h \
	main/xtag.c \
	main/xtag.h \
	main/xtag_p.h \
	$(parsers)
