
colorschemes = \
	colorschemes/alt.conf

filetypes = \
	filetypes.abaqus \
	filetypes.abc \
	filetypes.actionscript \
	filetypes.ada \
	filetypes.asciidoc \
	filetypes.asm \
	filetypes.batch \
	filetypes.c \
	filetypes.caml \
	filetypes.Clojure.conf \
	filetypes.cmake \
	filetypes.cobol \
	filetypes.coffeescript \
	filetypes.common \
	filetypes.conf \
	filetypes.cpp \
	filetypes.cs \
	filetypes.css \
	filetypes.CUDA.conf \
	filetypes.Cython.conf \
	filetypes.d \
	filetypes.diff \
	filetypes.docbook \
	filetypes.erlang \
	filetypes.f77 \
	filetypes.ferite \
	filetypes.forth \
	filetypes.fortran \
	filetypes.freebasic \
	filetypes.Genie.conf \
	filetypes.glsl \
	filetypes.go \
	filetypes.Graphviz.conf \
	filetypes.haskell \
	filetypes.haxe \
	filetypes.html \
	filetypes.java \
	filetypes.javascript \
	filetypes.JSON.conf \
	filetypes.latex \
	filetypes.lisp \
	filetypes.lua \
	filetypes.makefile \
	filetypes.markdown \
	filetypes.matlab \
	filetypes.nsis \
	filetypes.objectivec \
	filetypes.pascal \
	filetypes.perl \
	filetypes.php \
	filetypes.po \
	filetypes.powershell \
	filetypes.python \
	filetypes.r \
	filetypes.restructuredtext \
	filetypes.ruby \
	filetypes.rust \
	filetypes.Scala.conf \
	filetypes.sh \
	filetypes.sql \
	filetypes.tcl \
	filetypes.txt2tags \
	filetypes.vala \
	filetypes.verilog \
	filetypes.vhdl \
	filetypes.xml \
	filetypes.yaml \
	filetypes.zephir

tagfiles = \
	c99.tags \
	php.tags \
	python.tags \
	pascal.tags \
	html_entities.tags

template_files = \
	templates/files/file.html \
	templates/files/file_html5.html \
	templates/files/file.php \
	templates/files/file.rb \
	templates/files/file.tex \
	templates/files/main.c \
	templates/files/main.cxx \
	templates/files/main.d \
	templates/files/main.java \
	templates/files/main.py \
	templates/files/main.vala \
	templates/files/module.erl \
	templates/files/program.pas

templates = \
	templates/bsd \
	templates/changelog \
	templates/fileheader \
	templates/function \
	templates/gpl

nobase_dist_pkgdata_DATA = \
	$(colorschemes) \
	$(filetypes) \
	$(tagfiles) \
	$(template_files) \
	$(templates) \
	filetype_extensions.conf \
	snippets.conf \
	ui_toolbar.xml \
	geany.glade

if GTK3
nobase_dist_pkgdata_DATA += geany.css
else
nobase_dist_pkgdata_DATA += geany.gtkrc
endif

