
colorschemes = \
	colorschemes/alt.conf

filetypes_dist = \
	filedefs/filetypes.abaqus \
	filedefs/filetypes.abc \
	filedefs/filetypes.actionscript \
	filedefs/filetypes.ada \
	filedefs/filetypes.Arduino.conf \
	filedefs/filetypes.asciidoc \
	filedefs/filetypes.asm \
	filedefs/filetypes.batch \
	filedefs/filetypes.bibtex \
	filedefs/filetypes.c \
	filedefs/filetypes.caml \
	filedefs/filetypes.Clojure.conf \
	filedefs/filetypes.cmake \
	filedefs/filetypes.cobol \
	filedefs/filetypes.coffeescript \
	filedefs/filetypes.common \
	filedefs/filetypes.conf \
	filedefs/filetypes.cpp \
	filedefs/filetypes.cs \
	filedefs/filetypes.css \
	filedefs/filetypes.CUDA.conf \
	filedefs/filetypes.Cython.conf \
	filedefs/filetypes.d \
	filedefs/filetypes.diff \
	filedefs/filetypes.docbook \
	filedefs/filetypes.erlang \
	filedefs/filetypes.f77 \
	filedefs/filetypes.forth \
	filedefs/filetypes.fortran \
	filedefs/filetypes.freebasic \
	filedefs/filetypes.gdscript \
	filedefs/filetypes.Genie.conf \
	filedefs/filetypes.glsl \
	filedefs/filetypes.go \
	filedefs/filetypes.Graphviz.conf \
	filedefs/filetypes.Groovy.conf \
	filedefs/filetypes.haskell \
	filedefs/filetypes.haxe \
	filedefs/filetypes.html \
	filedefs/filetypes.java \
	filedefs/filetypes.javascript \
	filedefs/filetypes.julia \
	filedefs/filetypes.JSON.conf \
	filedefs/filetypes.latex \
	filedefs/filetypes.lisp \
	filedefs/filetypes.lua \
	filedefs/filetypes.Kotlin.conf \
	filedefs/filetypes.makefile \
	filedefs/filetypes.markdown \
	filedefs/filetypes.matlab \
	filedefs/filetypes.Meson.conf \
	filedefs/filetypes.Nim.conf \
	filedefs/filetypes.nsis \
	filedefs/filetypes.objectivec \
	filedefs/filetypes.pascal \
	filedefs/filetypes.perl \
	filedefs/filetypes.php \
	filedefs/filetypes.po \
	filedefs/filetypes.powershell \
	filedefs/filetypes.r \
	filedefs/filetypes.restructuredtext \
	filedefs/filetypes.ruby \
	filedefs/filetypes.rust \
	filedefs/filetypes.Scala.conf \
	filedefs/filetypes.sh \
	filedefs/filetypes.smalltalk \
	filedefs/filetypes.sql \
	filedefs/filetypes.Swift.conf \
	filedefs/filetypes.TypeScript.conf \
	filedefs/filetypes.tcl \
	filedefs/filetypes.txt2tags \
	filedefs/filetypes.vala \
	filedefs/filetypes.verilog \
	filedefs/filetypes.vhdl \
	filedefs/filetypes.xml \
	filedefs/filetypes.yaml \
	filedefs/filetypes.zephir \
	filedefs/filetypes.SCSS.conf \
	filedefs/filetypes.LESS.conf

# generated filetypes
filetypes_nodist = \
	filedefs/filetypes.python

tagfiles = \
	tags/std99.c.tags \
	tags/std.php.tags \
	tags/std.py.tags \
	tags/std.pas.tags \
	tags/entities.html.tags

template_files = \
	templates/files/file.html \
	templates/files/file_html5.html \
	templates/files/file.php \
	templates/files/file.rb \
	templates/files/file.tex \
	templates/files/main.c \
	templates/files/main.cxx \
	templates/files/main.d \
	templates/files/main.java \
	templates/files/main.py \
	templates/files/main.vala \
	templates/files/module.erl \
	templates/files/program.pas

templates = \
	templates/bsd \
	templates/changelog \
	templates/fileheader \
	templates/function \
	templates/gpl

nobase_dist_pkgdata_DATA = \
	$(colorschemes) \
	$(filetypes_dist) \
	$(tagfiles) \
	$(template_files) \
	$(templates) \
	filetype_extensions.conf \
	snippets.conf \
	ui_toolbar.xml \
	geany.glade \
	geany-3.0.css \
	geany-3.20.css \
	geany.css

nobase_pkgdata_DATA = \
	$(filetypes_nodist)
