install_subdir('filedefs',     install_dir: cdata.get('GEANY_DATA_DIR'))
install_subdir('templates',    install_dir: cdata.get('GEANY_DATA_DIR'))
install_subdir('tags',         install_dir: cdata.get('GEANY_DATA_DIR'))
install_subdir('colorschemes', install_dir: cdata.get('GEANY_DATA_DIR'))

misc = [
    'filetype_extensions.conf',
    'snippets.conf',
    'ui_toolbar.xml',
    'geany.glade',
    'geany-3.0.css',
    'geany-3.20.css',
    'geany.css',
]
install_data(sources: misc, install_dir: cdata.get('GEANY_DATA_DIR'))
